fix: gradients overlap CTA button

--- a/src/pages/HomePage/home-page.module.scss
+++ b/src/pages/HomePage/home-page.module.scss
@@ -48,6 +48,8 @@
 }
 
 .HeroSectionText {
+  position: relative;
+  z-index: 2;
   h1 {
     margin-bottom: 20px;
   }
